# HourGlass

./: CMakeLists.txt  README.md
HourGlass/: CMakeLists.txt
HourGlass/forms/: WMainWindow.ui  WProjects.ui  WReport.ui  WWorkHours.ui
HourGlass/include/: Context.h  File_io.h  Global.h  Hours.h  Item.h  Month.h  MonthModel.h  Project.h  ProjectDelegate.h  ProjectModel.h  RecentFiles.h  ReportModel.h  ValueTable.h  View.h  WMainWindow.h  WProjects.h  WReport.h  WWorkHours.h  XML_io.h  XML_tags.h
HourGlass/src/: Context.cpp  File_io.cpp  Global.cpp  Item.cpp  Month.cpp  MonthModel.cpp  Project.cpp  ProjectDelegate.cpp  ProjectModel.cpp  RecentFiles.cpp  ReportModel.cpp  View.cpp  WMainWindow.cpp  WProjects.cpp  WReport.cpp  WWorkHours.cpp  XML_io.cpp  main.cpp
HourGlass/styles/: hours.qss
